--- a/popup.html
+++ b/popup.html
@@ -47,6 +47,7 @@
 
 
     <div id="setting_description">
+      <div class="text_block" id="note"><b>Now it supports QQ web music!</b></div>
       <div class="text_block" id="help_text"></div>
       <div class="text_block" id="feedback"></div>
     </div>
